# rag-lite-tfidf-eval

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  Makefile  QUICK_REFERENCE.md  README.md  VERIFICATION_COMPLETE.md  VERIFICATION_REPORT.md  config.yaml  docker-compose.yml  pyproject.toml  quickstart.ps1  quickstart.sh  requirements.txt  verify_features.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
data/: docs.txt  eval.jsonl
outputs/: benchmark_report.md
scripts/: demo.ps1  make-demo-gif.ps1
src/: ablation.py  api.py  benchmark.py  benchmark_comparison.py  build_index.py  cache.py  cli.py  config.py  demo_grounded.py  evaluate.py  io_utils.py  query.py  rag.py  run_quickstart.py
tests/: conftest.py  test_evaluation.py  test_integration.py  test_retrieval.py
